# writ

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  COMMIT_MSG.tmp  LICENSE  README.md  commit_msg.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/agents/: coding-agent.mdc  devops-agent.mdc  git-commit-agent.mdc  instruction-reviewer.mdc  reviewer-agent.mdc  testing-agent.mdc
.cursor/rules/: .cursor-treeview.mdc  pre-commit-checks.mdc  project-rule.mdc  project-treeview.mdc  workspace-treeview.mdc
.cursor/to-do/: to-do_nomenclature.mdc
.github/workflows/: ci.yml  publish.yml
action/: action.yml
example_project/: AGENTS.md  README.md  package.json  pyproject.toml  tsconfig.json
example_project/.cursor/rules/: project-rules.mdc
example_project/src/: App.tsx  app.py
src/writ/: __init__.py  __main__.py  cli.py  utils.py
src/writ/commands/: __init__.py  agent.py  approvals.py  chat.py  compose.py  connect.py  diff.py  docs.py  export.py  handoff.py  hook.py  init.py  install.py  knowledge.py  library.py  lint.py  login.py  mcp.py  memory.py  model.py  peers_cmd.py  plan.py  publish.py  query.py  register.py  search.py  status.py  sync.py  upgrade.py
src/writ/core/: __init__.py  auth.py  composer.py  context_window.py  doc_health.py  file_io.py  formatter.py  invoker.py  label_scorer.py  linter.py  llm_client.py  local_llm.py  messaging.py  ml_scorer.py  models.py  peers.py  scanner.py  setfit_scorer.py  store.py  type_inference.py
src/writ/core/rubrics/: plan-review-v1.md
src/writ/integrations/: __init__.py  mcp_server.py  prpm.py  registry.py  skills.py  url.py
src/writ/models/: __init__.py
src/writ/models/tier2/: __init__.py  feature_config.json  scorer_brevity.py  scorer_clarity.py  scorer_coverage.py  scorer_examples.py  scorer_headline.py  scorer_structure.py  scorer_verification.py  shap_weights.json  suggestion_index.pkl  suggestion_templates.json  suggestion_templates_v2.json  tfidf_config.json
src/writ/models/tier2/labels/: __init__.py  label_has_actionable_commands.py  label_has_closure.py  label_has_examples.py  label_has_negative_constraints.py  label_has_positive_directives.py  label_has_verification.py  label_is_developer_focused.py  label_thresholds.json  label_vocab.json
src/writ/templates/_builtin/: writ-context.md
src/writ/templates/_builtin/agents/: writ-agent.md
src/writ/templates/_builtin/prompts/: docs-init-v1.md  docs-update-subagent-v1.md  docs-update-v1.md  lint-deep-v1.md  lint-fix-v1.md  plan-review-local-v1.md
src/writ/templates/_builtin/skills/: autoresearch.md  (+10 more)
src/writ/templates/context/: api-context.yaml  project-context.yaml
src/writ/templates/default/: agent.yaml
src/writ/templates/fullstack/: architect.yaml  implementer.yaml  reviewer.yaml  tester.yaml
src/writ/templates/python/: developer.yaml  reviewer.yaml
src/writ/templates/react/: developer.yaml  reviewer.yaml
src/writ/templates/rules/: coding-standards.yaml  project-rule-template.yaml
src/writ/templates/typescript/: developer.yaml  reviewer.yaml
templates/default/: agent.yaml
templates/fullstack/: implementer.yaml
tests/: conftest.py  test_approvals_cli.py  test_cli.py  test_compose.py  test_context_window.py  test_diff.py  test_docs.py  test_formatter.py  test_handoff_cli.py  test_invoker.py  test_knowledge_cli.py  test_library.py  test_linter.py  test_login.py  test_mcp.py  test_memory_cli.py  test_messaging.py  test_models.py  test_register.py  test_scanner.py  test_store.py  test_sync.py  test_type_inference.py  test_upgrade.py
(+6 files in other folders)
